fix open last shared project & update favicon & add configFile to gitignore

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Well Insight App</title>
-    <link rel="shortcut icon" href="img/Well_Insight.ico" type="image/x-icon">
+    <title>I2G Cloud</title>
+    <link rel="shortcut icon" href="img/i2g_fav.png" type="image/x-icon">
 
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
