--- a/source/html/index.html
+++ b/source/html/index.html
@@ -134,6 +134,7 @@
 
     <!-- socket.io.js -->
     <script src="vendor/js/socket.io.js"></script>
+    <script src="vendor/js/mqtt-client.js"></script>
 </head>
 
 <body ng-app='wiapp'>
