export zoneset to markerset

--- a/source/dialogs/create-new-zone/create-new-zone-modal.html
+++ b/source/dialogs/create-new-zone/create-new-zone-modal.html
@@ -34,7 +34,7 @@
                         </div>
                         <hr>
                         <div class="">
-                                <h5 class="modal-infomation-title">
+                                <h5 class="modal-infomation-title" style="color:black">
                                     <span class="user-define-16x16"></span>&nbsp;Template
                                 </h5>
                                 <div class="create-new-zone-modal-treeview col-sm-5" style="padding:5px; border: 1px solid #ddd;height:290px">
