--- a/source/html/index.html
+++ b/source/html/index.html
@@ -121,7 +121,7 @@
     <script src="vendor/js/angular-sanitize.min.js"></script>
     <script src="vendor/js/mfb-directive.js"></script>
     <script src="vendor/js/jquery.ui.touch-punch.min.js"></script>
-
+    <script src="vendor/js/dom-to-image.min.js"></script>
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-wizard.min.js"></script>
     <script src="vendor/js/handsontable.full.min.js"></script>
