--- a/source/dialogs/create-new-marker/create-new-marker-modal.html
+++ b/source/dialogs/create-new-marker/create-new-marker-modal.html
@@ -65,7 +65,7 @@
                                     </td>
                                     <td width="55%" style="text-align: center; vertical-align: middle; font-size: 13px">
                                         <svg height="20" width="100%" style="padding: 0 12px">
-                                            <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{wiModal.selectedTemplate.lineStyle.join(',')}}"
+                                            <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{wiModal.selectedTemplate.lineStyle.dashArray.join(',')}}"
                                                     style="stroke: {{wiModal.selectedTemplate.color}};"></line>
                                         </svg>
                                     </td>
