--- a/source/dialogs/create-new-marker/create-new-marker-modal.html
+++ b/source/dialogs/create-new-marker/create-new-marker-modal.html
@@ -50,7 +50,7 @@
                                         {{wiModal.selectedTemplate.name}}
                                     </td>
                                 </tr>
-                                <!-- <tr>
+                                <tr>
                                     <td width="45%" style="text-align: center; vertical-align: middle; font-size: 13px">
                                         Color
                                     </td>
@@ -58,16 +58,21 @@
                                         <label ng-style="{'background-color':wiModal.selectedTemplate.color}" class="form-control wi-form-control thick-border" style="width: 103px; height: 28px; margin: auto;">
                                         </label>
                                     </td>
-                                </tr> -->
+                                </tr>
                                 <tr>
                                     <td width="45%" style="text-align: center; vertical-align: middle; font-size: 13px">
                                         Line Style
                                     </td>
                                     <td width="55%" style="text-align: center; vertical-align: middle; font-size: 13px">
-                                        <svg height="20" width="100%" style="padding: 0 12px">
+                                        <!-- <svg height="20" width="100%" style="padding: 0 12px">
                                             <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{wiModal.selectedTemplate.lineStyle.dashArray.join(',')}}"
                                                     style="stroke: {{wiModal.selectedTemplate.color}};"></line>
+                                        </svg> -->
+                                        <svg ng-if="wiModal.selectedTemplate.lineStyle.shape === 'line'" height="16" width="100%" style="margin: 2px;">
+                                            <line x1="0" y1="8" x2="100%" y2="8" stroke-width="{{wiModal.selectedTemplate.lineWidth}}" stroke-dasharray="{{wiModal.selectedTemplate.lineStyle.dashArray.join(',')}}"
+                                                stroke="{{wiModal.selectedTemplate.color}}"></line>
                                         </svg>
+                                        <svg ng-if="wiModal.selectedTemplate.lineStyle.shape !== 'line'" height="16" width="100%" style="margin: 2px;" ng-bind-html="wiModal.getLineHtml(selectedTemplate)">
                                     </td>
                                 </tr>
                                 <tr>
