fix search box on fill pattern modal

--- a/source/dialogs/share-project/share-project-modal.html
+++ b/source/dialogs/share-project/share-project-modal.html
@@ -51,6 +51,7 @@
                                         container="wiModal"
                                         config="wiModal.groupsConfig"
                                         on-click-function='wiModal.groupClicked'
+                                        filter='{{wiModal.grFilter}}'
                                         filter-by="{{wiModal.filterBy}}">
                             </wi-base-treeview>
                         </wi-scroll>
