--- a/source/dialogs/fill-pattern/fill-pattern-modal.html
+++ b/source/dialogs/fill-pattern/fill-pattern-modal.html
@@ -9,14 +9,18 @@
                 <div class="row" style="padding-top: 5px;">
                     <div class="col-sm-9">
                         <div class="wrapper-style">
-                            <div style='background-color:white;border:none;display: flex;padding-top: 2px;padding-bottom: 2px; padding-left: 8px;'>
+                            <div style='background-color:white;border:none;display: flex;padding-left: 8px;'>
                                 <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
                                 <input type='text' id="focus" 
-                                        style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;'
-                                        ng-model="wiModal.filter">
+                                        style='flex:1; margin-left: -17px; padding-left: 32px;color:steelblue;'
+                                        ng-model="wiModal.filter"
+                                        ng-change="wiModal.onFilterEnterKey(wiModal.filter);">
                             </div>
                             <div style="height: 400px;overflow-y: overlay;display:flex;" class="list-pattern-style">
-                                <wi-scroll id-scroll='"__patternScroll"' style='flex:1;display:flex;flex-direction:column;' up-trigger="wiModal.upTrigger" down-trigger='wiModal.downTrigger' animation-timeout="0">
+                                <wi-scroll id-scroll='"__patternScroll"' style='flex:1;display:flex;flex-direction:column;' 
+                                            up-trigger="wiModal.upTrigger" 
+                                            down-trigger='wiModal.downTrigger' 
+                                            animation-timeout="0">
                                     <wi-base-treeview
                                         name="__pattern"
                                         container="wiModal"
