--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -274,7 +274,7 @@
                             </form>
                         </div>
                     </wi-tab>
-                    <wi-tab heading="Print Setting">
+                    <wi-tab heading="Print Settings">
                         <div class="container-fluid">
                             <form class="form-condensed">
                                 <div class="col-sm-12 input-field">
